<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="15dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/fragment_home_post_viewer_user_img"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:civ_border_color="@color/instacenterclord"
                    app:civ_border_width="0.5dp"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:id="@+id/fragment_home_post_viewer_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Username"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"/>

                <ImageView
                    android:id="@+id/fragment_home_post_viewer_option"
                    android:layout_width="20dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/menu"
                    app:tint="@color/textcolor"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

            <com.prashant.instaclone.Utils.SquareImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_home_post_viewer_post_image"
                android:scaleType="centerCrop"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:padding="13dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/fragment_home_post_viewer_img_heart"
                        android:src="@drawable/heart"
                        android:visibility="visible"
                        android:layout_centerInParent="true"/>
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/fragment_home_post_viewer_img_heart_red"
                        android:src="@drawable/redheart"
                        android:visibility="invisible"
                        android:layout_centerInParent="true"/>
                </RelativeLayout>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/fragment_home_post_viewer_img_comments"
                    android:src="@drawable/comments" />
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/fragment_home_post_viewer_img_send"
                    android:src="@drawable/send"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/fragment_home_post_viewer_img_save"
                        android:src="@drawable/save"/>

                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_home_post_viewer_txt_likes"
                android:text="@string/likes"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_home_post_viewer_txt_caption"
                android:text="@string/caption"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/fragment_home_post_viewer_txt_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/tags"
                android:textColor="#3648AC"
                android:textSize="13sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_home_post_viewer_txt_commments"
                android:text="@string/comments"
                android:textColor="@color/lightgray"
                android:textSize="14sp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_home_post_viewer_txt_timePosted"
                android:text="@string/_0_days_ago"
                android:textColor="@color/lightgray"
                android:textSize="10sp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                tools:ignore="SmallSp" />





        </LinearLayout>
    </ScrollView>

<!--    <ProgressBar-->
<!--        android:layout_width="80dp"-->
<!--        android:layout_height="80dp"-->
<!--        android:id="@+id/fragment_home_post_viewer_ProgressBar"-->
<!--        android:layout_centerInParent="true"/>-->


</RelativeLayout>